base functionality is working

--- a/popup.html
+++ b/popup.html
@@ -2,15 +2,15 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="button.css">
+    <link rel="stylesheet" href="popup.css">
 </head>
 
 <body>
-    <form>
-        <label name="tab_reason">Why did you open this tab?</label>
-        <input type="text" id="tab_reason" name="tab_reason"></input>
+    <form name="tabReason">
+        <input autofocus type="text" id="reasonInput" name="reasonInput"/>
+        <input type="submit" value="Confirm"/>
     </form>
-    <script src="popup.js"></script>
+    <script src=popup.js></script>
 </body>
 
 </html>
