display tab reason in popup as well

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,9 @@
 </head>
 
 <body>
-    <form name="tabReason">
+    <span id="currentTabReason"></span>
+    <form name="setTabReason">
+        Reason for opening the most recent tab:
         <input autofocus type="text" id="reasonInput" name="reasonInput"/>
         <input type="submit" value="Confirm"/>
     </form>
